<resources>
    <string name="app_name">Android</string>

    <string name="nombre">Name:</string>
    <string name="fecha_de_nacimiento">Birthday:</string>
    <string name="cuidad">City:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="textview">textView</string>
    <string name="imageDescripcion">Image Descrpicion</string>
    <string name="moviename">Movie Name</string>
    <string name="movieScore">Movie Score</string>
    <string name="originalMovieName">Original Name</string>
    <string name="releaseDate">Release Date:</string>
    <string name="releaseDateValue">Release Date Value</string>
    <string name="search_movies">Search Movies</string>
    <string name="profile">Profile</string>
    <string name="movies">Movies</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="home_view">Home View</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_movie_detail">movieDetail</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="delete_all">Delete All</string>
    <string name="search">Search</string>
</resources>
