<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.main.ui.fragments.search.SearchFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Image-->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/detailImg"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                app:civ_border_color="@color/colorPrimaryDark"
                app:civ_border_width="3dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Titles-->
            <TextView
                android:id="@+id/detailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/nombre"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/detailImg" />

            <TextView
                android:id="@+id/detailReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/fecha_de_nacimiento"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/detailName" />

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/cuidad"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/detailReleaseDate" />

            <TextView
                android:id="@+id/detailDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/descripcion"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/city" />

            <!--Values-->
            <TextView
                android:id="@+id/detailNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/textview"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/detailName"
                app:layout_constraintTop_toTopOf="@+id/detailName" />

            <TextView
                android:id="@+id/cityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/textview"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/city"
                app:layout_constraintTop_toTopOf="@+id/city" />

            <TextView
                android:id="@+id/detailReleaseDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/textview"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/detailReleaseDate"
                app:layout_constraintTop_toTopOf="@+id/detailReleaseDate" />

            <TextView
                android:id="@+id/detailDescValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="40dp"
                android:justificationMode="inter_word"
                android:text="@string/textview"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/detailDesc" />

            <!--Guidelines-->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="33dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="383dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>